background, methods, functions

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -5,7 +5,9 @@
     <title>Survey Page</title>
 
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
+    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" 
+    crossorigin="anonymous">
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -17,11 +19,12 @@
         <div class="jumbotron">
             <h1 class="text-center"><i class="fa fa-female"></i> Friend Finder <i class="fa fa-male"></i></h1>
             <hr>
-            <h2 id="jumbo_h2" class="text-center">Let's get started - Fill out the survey</h2>
+            <h2 id="jumbo_h2" class="text-center">Let's GO - Fill out the survey</h2>
             <br>
 
             <div class="text-center">
-                <a href="/"><button type="button" class="btn btn-lg btn-primary"><span class="glyphicon glyphicon-home"></span>  Home</button></a>
+                <a href="/"><button type="button" class="btn btn-lg btn-primary">
+                    <span class="glyphicon glyphicon-home"></span>  Home</button></a>
             </div>
         </div>
         <div class="row">
@@ -45,10 +48,10 @@
                         <input type="text" name="" id="photo" class="form-control" required >
                         <hr>
 
-                        <h3><strong>Survey Questions</strong></h3>
+                        <h3><strong>Answer Survey Questions Below</strong></h3>
                         <hr>
 
-                        <h3>You want a friend who is always ready to help you.</h3>
+                        <h3>You prefer who are intellectuals?</h3>
                         <select data-placeholder="" class="chosen-select" id="q1">
                             <option value=""></option>
                             <option selected="selected" value="1">1 (Strongly Disagree)</option>
@@ -59,7 +62,7 @@
                         </select>
 
 
-                        <h3>Strong moral views are important qualities for a friend.</h3>
+                        <h3>Strong moral views are important for friendship?</h3>
                         <select data-placeholder="" class="chosen-select" id="q2">
                             <option value=""></option>
                             <option selected="selected" value="1">1 (Strongly Disagree)</option>
@@ -70,7 +73,7 @@
                         </select>
 
 
-                        <h3>You like friends who are quirky.</h3>
+                        <h3>You like friends who are plucky?</h3>
                         <select data-placeholder="" class="chosen-select" id="q3">
                             <option value=""></option>
                             <option selected="selected" value="1">1 (Strongly Disagree)</option>
@@ -81,7 +84,7 @@
                         </select>
 
 
-                        <h3>You like friends who are spontaneous.</h3>
+                        <h3>You like friends who are spontaneous?</h3>
                         <select data-placeholder="" class="chosen-select" id="q4">
                             <option value=""></option>
                             <option selected="selected" value="1">1 (Strongly Disagree)</option>
@@ -92,7 +95,7 @@
                         </select>
 
 
-                        <h3>You value friends who are loud and funny instead of quiet and shy.</h3>
+                        <h3>You prefer funny instead of serious?</h3>
                         <select data-placeholder="" class="chosen-select" id="q5">
                             <option value=""></option>
                             <option selected="selected" value="1">1 (Strongly Disagree)</option>
@@ -102,7 +105,7 @@
                             <option value="5">5 (Strongly Agree)</option>
                         </select>
 
-                        <h3>You want a friend who would rather read a book than go on an adventure.  </h3>
+                        <h3>You prefer a simple outings more adventurous outings?  </h3>
                         <select data-placeholder="" class="chosen-select" id="q9">
                             <option value=""></option>
                             <option selected="selected" value="1">1 (Strongly Disagree)</option>
@@ -112,7 +115,7 @@
                             <option value="5">5 (Strongly Agree)</option>
                         </select>
 
-                        <h3>You like friends who are not afraid to disagree with you.</h3>
+                        <h3>You like people who are not afraid to disagree with you?</h3>
                         <select data-placeholder="" class="chosen-select" id="q10">
                             <option value=""></option>
                             <option selected="selected" value="1">1 (Strongly Disagree)</option>
@@ -122,7 +125,7 @@
                             <option value="5">5 (Strongly Agree)</option>
                         </select>
 
-                        <h3>You need a friend who loves being outdoors.</h3>
+                        <h3>You like people who love being outdoors?</h3>
                         <select data-placeholder="" class="chosen-select" id="q6">
                             <option value=""></option>
                             <option selected="selected" value="1">1 (Strongly Disagree)</option>
@@ -132,7 +135,7 @@
                             <option value="5">5 (Strongly Agree)</option>
                         </select>
 
-                        <h3>Your idea of a fun get together involves going to sporting events.</h3>
+                        <h3>You want friends who like going to concert?</h3>
                         <select data-placeholder="" class="chosen-select" id="q7">
                             <option value=""></option>
                             <option selected="selected" value="1">1 (Strongly Disagree)</option>
@@ -142,7 +145,7 @@
                             <option value="5">5 (Strongly Agree)</option>
                         </select>
 
-                        <h3>You would much rather go to a restaurant and a movie than get together with friends and play games.</h3>
+                        <h3>You love going to the movies?</h3>
                         <select data-placeholder="" class="chosen-select" id="q8">
                             <option value=""></option>
                             <option selected="selected" value="1">1 (Strongly Disagree)</option>
