--- a/app/public/home.html
+++ b/app/public/home.html
@@ -5,7 +5,9 @@
     <title>Friends Page</title>
 
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
+    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" 
+    crossorigin="anonymous">
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -13,10 +15,14 @@
     <script src="https://use.fontawesome.com/0bf9ac1b8c.js"></script>
 
      <!-- jQuery Reference -->
-    <script   src="https://code.jquery.com/jquery-2.2.3.min.js"   integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo="   crossorigin="anonymous"></script>
+    <script   src="https://code.jquery.com/jquery-2.2.3.min.js"   
+    integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo="   
+    crossorigin="anonymous"></script>
 
     <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" 
+    integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" 
+    crossorigin="anonymous"></script>
 
 </head>
 <body>
@@ -26,10 +32,10 @@
         <div class="jumbotron">
             <!--<span class="glyphicon glyphicon-link"></span> -->
 
-            <h1 class="text-center"><i class="fa fa-female"></i> Friend Finder <i class="fa fa-male"></i></h1>
+            <h1 class="text-center"><i class="fa fa-female"></i> Friend Match <i class="fa fa-male"></i></h1>
             <hr>
-            <h2 class="text-center">Looking for a new friend to just hang out with?</h2>
-            <h2 class="text-center">Fill out the survey to find a compatible friend</h2>
+            <h2 class="text-center">Which friend is most compatible?</h2>
+            <h2 class="text-center">Fill out the survey to find out</h2>
             <br>
 
             <div class="text-center">
@@ -41,7 +47,8 @@
     <footer class="footer">
       <div class="container">
             <p class="bold"><a href="/api/friends">API Friends Link</a> |
-            <a href="https://github.com/clsavino/Friend-Finder---Node-and-Express-Servers" target="_blank">GitHub Repo</a></p>
+            <a href="https://github.com/uclashawn1/matchFriendShawn" 
+            target="_blank">GitHub Repo</a></p>
       </div>
     </footer>
 
