--- a/app/public/home.html
+++ b/app/public/home.html
@@ -35,7 +35,7 @@
             <h1 class="text-center"><i class="fa fa-female"></i> Friend Match <i class="fa fa-male"></i></h1>
             <hr>
             <h2 class="text-center">Which friend is most compatible?</h2>
-            <h2 class="text-center">Fill out the survey to find out</h2>
+            <h2 class="text-center">Fill out survey to find out</h2>
             <br>
 
             <div class="text-center">
