--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -51,7 +51,7 @@
                         <h3><strong>Answer Survey Questions Below</strong></h3>
                         <hr>
 
-                        <h3>You prefer who are intellectuals?</h3>
+                        <h3>You prefer people who are intellectuals?</h3>
                         <select data-placeholder="" class="chosen-select" id="q1">
                             <option value=""></option>
                             <option selected="selected" value="1">1 (Strongly Disagree)</option>
@@ -73,7 +73,7 @@
                         </select>
 
 
-                        <h3>You like friends who are plucky?</h3>
+                        <h3>You like people who are plucky?</h3>
                         <select data-placeholder="" class="chosen-select" id="q3">
                             <option value=""></option>
                             <option selected="selected" value="1">1 (Strongly Disagree)</option>
@@ -84,7 +84,7 @@
                         </select>
 
 
-                        <h3>You like friends who are spontaneous?</h3>
+                        <h3>You like people who are spontaneous?</h3>
                         <select data-placeholder="" class="chosen-select" id="q4">
                             <option value=""></option>
                             <option selected="selected" value="1">1 (Strongly Disagree)</option>
@@ -95,7 +95,7 @@
                         </select>
 
 
-                        <h3>You prefer funny instead of serious?</h3>
+                        <h3>You prefer funny people to serious people?</h3>
                         <select data-placeholder="" class="chosen-select" id="q5">
                             <option value=""></option>
                             <option selected="selected" value="1">1 (Strongly Disagree)</option>
@@ -105,7 +105,7 @@
                             <option value="5">5 (Strongly Agree)</option>
                         </select>
 
-                        <h3>You prefer a simple outings more adventurous outings?  </h3>
+                        <h3>You prefer a simple outings more than adventurous outings?  </h3>
                         <select data-placeholder="" class="chosen-select" id="q9">
                             <option value=""></option>
                             <option selected="selected" value="1">1 (Strongly Disagree)</option>
@@ -135,7 +135,7 @@
                             <option value="5">5 (Strongly Agree)</option>
                         </select>
 
-                        <h3>You want friends who like going to concert?</h3>
+                        <h3>You want friends who like going to concerts?</h3>
                         <select data-placeholder="" class="chosen-select" id="q7">
                             <option value=""></option>
                             <option selected="selected" value="1">1 (Strongly Disagree)</option>
@@ -145,7 +145,7 @@
                             <option value="5">5 (Strongly Agree)</option>
                         </select>
 
-                        <h3>You love going to the movies?</h3>
+                        <h3>You want friends who love going to the movies?</h3>
                         <select data-placeholder="" class="chosen-select" id="q8">
                             <option value=""></option>
                             <option selected="selected" value="1">1 (Strongly Disagree)</option>
